<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:id="@+id/activity_account_signup"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              tools:context="it.uspread.android.activity.account.SignupActivity">

    <include layout="@layout/toolbar"/>

    <EditText
        android:id="@+id/edit_username"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="80dp"
        android:inputType="text"
        android:hint="@string/text_username"/>

    <EditText
        android:id="@+id/edit_password"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:inputType="textPassword"
        android:hint="@string/text_password"/>

    <EditText
        android:id="@+id/edit_email"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:inputType="textEmailAddress"
        android:hint="@string/text_email"/>

    <Button
        android:id="@+id/action_subscribe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/action_signup"
        android:onClick="register"/>


</LinearLayout>